jsoup changelog

*** Release 1.14.2 [PENDING]
  * Bugfix [Fuzz]: fixed a slow parse when a tag has thousands of null characters in it.
    <https://github.com/jhy/jsoup/issues/1580>

  * Bugfix [Fuzz]: the adoption agency algorithm can have an incorrect bookmark position
    <https://github.com/jhy/jsoup/issues/1576>

*** Release 1.14.1 [2021-Jul-10]
  * Change: updated the minimum supported Java version from Java 7 to Java 8.

  * Change: updated the minimum Android API level from 8 to 10.

  * Change: although Node#childNodes() returns an UnmodifiableList as a view into its children, it was still
    directly backed by the internal child list. That made some uses, such as looping and moving those children to
    another element, throw a ConcurrentModificationException. Now this method returns its own list so that they are
    separated and changes to the parent's contents will not impact the children view. This aligns with similar methods
    such as Element#children(). If you have code that iterates this list and makes parenting changes to its contents,
    you may need to make a code update.
    <https://github.com/jhy/jsoup/issues/1431>

  * Change: the org.jsoup.Connection interface has been modified to introduce new methods for sessions and the cookie
    store. If you have a custom implementation of this interface, you will need to add implementations of these methods.

  * Improvement: added HTTP request session management support with Jsoup.newSession(). This extends the Connection
    implementation to support (optional) sessions, which allow request defaults (timeout, proxy, etc) to be set once and
    then applied to all requests within that session.

    Cookies are re-implemented to correctly support path and domain filtering when used within a session. A default
    in-memory cookie store is used for the session, or a custom implementation (perhaps disk-persistent, or pre-set)
    can be used instead.
