@@ -7,6 +7,9 @@ jsoup changelog
   * Bugfix [Fuzz]: the adoption agency algorithm can have an incorrect bookmark position
     <https://github.com/jhy/jsoup/issues/1576>
 
+  * Bugfiz [Fuzz]: malformed HTML could result in null elements on stack
+    <https://github.com/jhy/jsoup/issues/1579>
+
 *** Release 1.14.1 [2021-Jul-10]
   * Change: updated the minimum supported Java version from Java 7 to Java 8.
 
